# PETcat_simulator

./: README.md
billi_sim/: CMakeLists.txt  package.xml
billi_sim/config/: billi.yaml
billi_sim/launch/: control.launch  default.launch  spawn_billi.launch  world.launch
billi_sim/models/meshes/: body.stl  leg1-lower.stl  leg1.stl  leg2-lower.stl  leg2.stl  paw.stl  shoulder.stl
billi_sim/models/meshes/dae/: body.dae  head.dae  leg-upper.dae  leg1-lower.dae  leg2-lower.dae
billi_sim/models/urdf/: billi.xacro  body.xacro  head.xacro  leg-lower1.xacro  leg-lower2.xacro  leg-lower3.xacro  leg-lower4.xacro  leg.xacro  leg1.xacro  leg2.xacro  leg3.xacro  leg4.xacro  model.config  paw.xacro  shoulder.xacro
champ/champ_base/include/: message_relay.h  quadruped_controller.h
champ/champ_base/src/: message_relay.cpp  quadruped_controller.cpp
champ/champ_bringup/launch/: bringup.launch  joints_gui.launch
champ/champ_config/config/gait/: gait.yaml
champ/champ_config/config/joints/: joints.yaml
champ/champ_config/config/links/: links.yaml
champ/champ_config/include/: gait_config.h
champ/champ_config/launch/: bringup.launch  gazebo.launch
champ/champ_description/meshes/: base.stl  upper_leg3.stl
champ/champ_description/rviz/: urdf_viewer.rviz
champ/champ_description/urdf/: accessories.urdf.xacro  champ.urdf  champ.urdf.xacro
champ/champ_gazebo/config/: ros_control.yaml
champ/champ_gazebo/launch/: gazebo.launch
champ_sim/champ_simulator/: CMakeLists.txt  package.xml
champ_sim/champ_simulator/launch/: default.launch  spawn_champ.launch
champ_sim/champ_simulator/rviz/: urdf_viewer.rviz
champ_sim/champ_simulator/urdf/: accessories.urdf.xacro  champ.urdf  champ.urdf.xacro  champ_arm.urdf  gen_urdf  leg.urdf.xacro  properties.urdf.xacro
champ_sim/champ_simulator/worlds/: island.world  small.world
towr_simulator/: CMakeLists.txt  package.xml
towr_simulator/cfg/: control_params.yaml
towr_simulator/launch/: default.launch  spawn_hyq.launch
towr_simulator/models/urdf/: hyq.xacro  leg.xacro  model.config  trunk.xacro
towr_simulator/src/: joint_state_converter.cpp
(+2 files in other folders)
